--- a/BlazorTool.Client/Components/OrdersGrid.razor
+++ b/BlazorTool.Client/Components/OrdersGrid.razor
@@ -24,7 +24,7 @@
              Sortable="true"
              Resizable="true"
              Pageable="@(!UseVirtualScrollMode)"
-             FilterMode="@GridFilterMode.FilterMenu"
+             FilterMode="@GridFilterMode.FilterMenu"             
              OnRowRender="@OnRowRenderHandler"
              OnRowDoubleClick="@(args => OnRowClick(args))"
              OnRowContextMenu="@OnRowContextMenuHandler"
@@ -189,6 +189,7 @@
 </TelerikWindow>
 
 @code {
+
     [Parameter] public List<WorkOrder> OrdersForGrid { get; set; } = new List<WorkOrder>();
     [Parameter] public EventCallback<SchedulerAppointment> OnOrderChanged { get; set; }
     [Parameter] public List<string> workOrderStates { get; set; } = new List<string>();
@@ -198,19 +199,18 @@
     [Parameter] public int PageSize { get; set; } = 30;
     [Parameter] public string Height { get; set; } = "100%";
     [Parameter] public EventCallback<GridStateEventArgs<WorkOrder>> OnStateChanged { get; set; }
-    [Parameter] public List<ContextMenuItem> MenuItems { get; set; }
+    [Parameter] public List<ContextMenuItem> MenuItems { get; set; } = new List<ContextMenuItem>();
     [Parameter] public EventCallback<ContextMenuItemClickEventArgs<WorkOrder>> OnMenuItemClick { get; set; }
     [Parameter] public EventCallback<ContextMenuItemClickEventArgs<WorkOrder>> OnRowContextMenu { get; set; }
     [Parameter] public bool ShowAssignedColumnFilter { get; set; } = true;
-    public int FilteredRowsCount { get; set; }
-    private TelerikContextMenu<ContextMenuItem> ContextMenuRef { get; set; }
-    private WorkOrder SelectedRecord { get; set; }
+    public int FilteredRowsCount = 0;
+    private TelerikContextMenu<ContextMenuItem>? ContextMenuRef { get; set; }
     private Person currentUser { get; set; } = new Person();
     private List<Person> allPersons { get; set; } = new List<Person>();
     private List<string> personNames { get; set; } = new List<string>();
     private List<WODict> dicts { get; set; } = new List<WODict>();
     private bool isOrderCardOpen = false;
-    private WorkOrder _selectedOrder;
+    private WorkOrder _selectedOrder = new();
     private WorkOrder selectedOrder
     {
         get => _selectedOrder;
@@ -224,7 +224,7 @@
     private string dateColumnsize = "9rem";
     public TelerikGrid<WorkOrder> GridRef { get; set; } = new();
     private MarkupString rowStyles = new MarkupString();
-
+    private GridState<WorkOrder> currentGridState = new();
     private double? lastCursorX;
     private double? lastCursorY;
 
@@ -240,14 +240,15 @@
 
     protected override void OnParametersSet()
     {
-        FilteredRowsCount = OrdersForGrid.Count;
         rowStyles = RenderStatesStyle(OrdersForGrid.Select(x => x.StateColor).Where(c => !string.IsNullOrWhiteSpace(c)).Distinct());
         base.OnParametersSet();
+        RefreshRowsCount();
     }
 
     void OnRowRenderHandler(GridRowRenderEventArgs args)
     {
         var item = args.Item as WorkOrder;
+        if (item == null) return;
         args.Class = " custom-row ";
         args.Class += GetStateColorClass(item);
     }
@@ -429,16 +430,17 @@
     async Task OnRowContextMenuHandler(GridRowClickEventArgs args)
     {
         if (args == null || args.Item == null) return;
-        SelectedRecord = (args.Item as WorkOrder) ?? new ();
+        selectedOrder = (args.Item as WorkOrder) ?? new ();
         var mouseEventArgs = args.EventArgs as MouseEventArgs;
         if (mouseEventArgs != null)
         {
             lastCursorX = mouseEventArgs.ClientX;
             lastCursorY = mouseEventArgs.ClientY;
-            await ContextMenuRef.ShowAsync(mouseEventArgs.ClientX, mouseEventArgs.ClientY);
+            if (ContextMenuRef == null) return;
+            await ContextMenuRef.ShowAsync(lastCursorX ?? 0, lastCursorY ?? 0);
             var newMenuItemEventarg = new ContextMenuItemClickEventArgs<WorkOrder>()
             {
-                Item = SelectedRecord,
+                Item = selectedOrder,
                 MenuItem = null
             };
             await OnRowContextMenu.InvokeAsync(newMenuItemEventarg);
@@ -452,7 +454,7 @@
             var menu = new ContextMenuItemClickEventArgs<WorkOrder>()
             {
                 MenuItem = item,
-                Item = SelectedRecord
+                Item = selectedOrder
             };
             menu.MenuItem.CursorX = lastCursorX ?? 200;
             menu.MenuItem.CursorY = lastCursorY ?? 200;
@@ -462,15 +464,32 @@
 
     async Task OnGridStateChanged(GridStateEventArgs<WorkOrder> args)
     {
+        currentGridState = args.GridState;
+        RefreshRowsCount();
         await OnStateChanged.InvokeAsync(args);
-        
+    }
+
+    private void RefreshRowsCount()
+    {
+        RefreshRowsCount(OrdersForGrid);
+    }
+
+    public void RefreshRowsCount(List<WorkOrder> orders)
+    {
+        if (currentGridState == null ||
+            currentGridState.FilterDescriptors == null ||
+            currentGridState.FilterDescriptors.Count == 0)
+        {
+            FilteredRowsCount = orders.Count;
+            return;
+        }
+
         var request = new DataSourceRequest
         {
-            Filters = args.GridState.FilterDescriptors.ToList()
+            Filters = currentGridState.FilterDescriptors.ToList()
         };
 
-        var result = OrdersForGrid.AsQueryable().ToDataSourceResult(request);
+        var result = orders.AsQueryable().ToDataSourceResult(request);
         FilteredRowsCount = (int)result.Total;
-
     }
 }
