--- a/BlazorTool.Client/Pages/ActivitiesPage.razor
+++ b/BlazorTool.Client/Pages/ActivitiesPage.razor
@@ -32,11 +32,10 @@
 
 <TelerikTooltip ShowDelay="200" Width="30vh" TargetSelector=".tooltip-target" />
 
-<div class="filter-controls-row">
-    <div style="flex-basis: 66%; flex-shrink:1; flex-grow:0; display: flex; gap: 1rem;">
+<div class="filter-controls-row">    
         @if (UserState.HasPermission(PermissionType.ADMIN))
         {
-            <div style="max-width: 400px;">
+            <div class="TakePersons" style="max-width: 400px;">
                 <label>@Localizer["TakePersons"] </label>
                 <TelerikMultiSelect
                     Data="@allUsers"
@@ -54,7 +53,7 @@
                     Size="@_multiSelectSize">
                 </TelerikMultiSelect>
             </div>
-            <div>
+            <div class="departments">
                 <label>@Localizer["Scheduler_Department"] </label>
                 <TelerikMultiSelect
                                 Data="@Departments" TextField="Department"
@@ -71,7 +70,7 @@
                 </TelerikMultiSelect>
             </div>
         }
-        <div>
+        <div class="devices">
             <label>@Localizer["Scheduler_Device"] </label>
             <TelerikMultiSelect Data="@DeviceNames"
                              Placeholder="@Localizer["Scheduler_SelectAsset"]"
@@ -84,7 +83,7 @@
                              class=@(WOEditFormShown ? "" : "popup-target")>
             </TelerikMultiSelect>
         </div>
-        <div style="display:flex; align-items: center; gap:3px;">
+        <div class="only-active-switch" style="display:flex; align-items: center; gap:3px;">
             <label>@Localizer["Only_Active"]:</label>
             <TelerikSwitch @bind-Value=@ShowActiveOnlyOrders OnChange="@OnSwitchActiveChanged">
 
@@ -95,41 +94,40 @@
                 @Localizer["ClearFilters"]
             </button>
         </div>
-                <div class="refresh-timer" style="display:flex; align-items:center; gap:6px;">
-                    <div style="display:@timerSetVisibility; align-items:center; gap:4px;">
-                        <label style="padding-right:4px;">@Localizer["OrdersPage_RefreshInterval"]</label>
-                        <TelerikNumericTextBox @bind-Value="@TimerInterval"
-                                               Min="1" Max="60" Width="70px" Size="sm"
-                                               OnChange="@OnTimerIntervalChanged" />
-                        <span>@Localizer["OrdersPage_Minutes"]</span>
+        <div class="refresh-timer" >
+        <div class="input--timer-interval" style="display: @timerSetVisibility;">
+                <label style="padding-right:4px;">@Localizer["OrdersPage_RefreshInterval"]</label>
+                <TelerikNumericTextBox @bind-Value="@TimerInterval"
+                                        @key="TimerInterval"
+                                        Min="1" Max="60" Width="70px" Size="sm"
+                                        OnChange="@OnTimerIntervalChanged" />
+                <span>@Localizer["OrdersPage_Minutes"]</span>
+            </div>
+            <Timer @ref="autoReloadTimer"
+                    Interval="@HardReloadInterval"
+                    OnTick="HardLoadDataTick"
+                    AutoStart="true"
+                    FireImmediately="false"
+                    SkipIfBusy="true"
+                    JitterMilliseconds="0"
+                    SoftTickTimeout="@(TimeSpan.FromSeconds(1))">
+                <ChildContent Context="ctx">
+                    <div class="clickable-timer" @onclick="@OnTimerClick" style="cursor:pointer; font-size:0.8rem; line-height:1.1rem;">
+                        @Localizer["NextUpdate"]: @(ctx.TimeLeft?.ToString("mm':'ss") ?? "-")<br />
+                        @Localizer["LastUpdate"]: @(ctx.LastTickAt?.LocalDateTime.ToLongTimeString() ?? "-")
                     </div>
-                    <Timer @ref="autoReloadTimer"
-                           Interval="@HardReloadInterval"
-                           OnTick="HardLoadDataTick"
-                           AutoStart="true"
-                           FireImmediately="false"
-                           SkipIfBusy="true"
-                           JitterMilliseconds="0"
-                           SoftTickTimeout="@(TimeSpan.FromSeconds(1))">
-                        <ChildContent Context="ctx">
-                            <div class="clickable-timer" @onclick="@OnTimerClick" style="cursor:pointer; font-size:0.8rem; line-height:1.1rem;">
-                                @Localizer["NextUpdate"]: @(ctx.TimeLeft?.ToString("mm':'ss") ?? "-")<br />
-                                @Localizer["LastUpdate"]: @(ctx.LastTickAt?.LocalDateTime.ToLongTimeString() ?? "-")
-                            </div>
-                        </ChildContent>
-                    </Timer>
-                </div>
-
-    </div>
+                </ChildContent>
+            </Timer>
+        </div>
 </div>
 <div class="scheduler-page-container">
     <div class="scheduler-container">
         <div class="scheduler-toolbar">
             <div class="toolbar-left" style="display:flex; gap:10px; align-items:center;">
                 <span>@Localizer["Scheduler_ScheduledOrders"] @Appointments.Count()</span>
-                <TelerikButton OnClick="@(async ()=> await HardLoadData())" Size="Small" ThemeColor="@ThemeConstants.Button.ThemeColor.Tertiary">@IconHtmlHelper.Refresh(20) @Localizer["Scheduler_ReloadAllData"]</TelerikButton>
+                <TelerikButton OnClick="@(async ()=> await HardLoadData())" Size="Small" ThemeColor="@ThemeConstants.Button.ThemeColor.Light">@IconHtmlHelper.Refresh(20) @Localizer["Scheduler_ReloadAllData"]</TelerikButton>
             </div>
-            <div class="toolbar-left" style="display:flex; gap:10px; align-items:center;">
+            <div class="toolbar-left total-workload" style="display:flex; gap:10px; align-items:center;">
                 <span>@Localizer["ActivityList_TotalWorkload"] @TotalWorkloadHours h</span>
             </div>
             <div class="toolbar-right">
@@ -1030,6 +1028,7 @@
     private async Task HardLoadDataTick()
     {
         var oldCount = Appointments.Count;
+         Console.WriteLine($"[TIMER] Activities Page ==> HardLoadDataTick at {DateTime.Now:HH:mm:ss}");
         await HardLoadData(false); // silent
         var newCount = Appointments.Count;
         if (newCount != oldCount)
