--- a/BlazorTool/wwwroot/app.css
+++ b/BlazorTool/wwwroot/app.css
@@ -48,7 +48,7 @@ h1:focus {
 
 .filter-controls-row {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     gap: 2rem;
     flex-wrap: wrap;
     flex-direction: row;
@@ -65,6 +65,14 @@ h1:focus {
     padding-right: 20px;
     display: inline-flex
 }
+
+.input--timer-interval {
+    display: flex;
+    line-height: 1rem;
+    align-items: center;
+    gap: 4px;
+    padding-right: 0.7rem;
+}
 .clickable-timer {
     /* Стили по умолчанию (не обязательны, если они уже заданы инлайново) */
     font-size: 0.8rem;
@@ -73,7 +81,7 @@ h1:focus {
     transition: opacity 0.2s ease, background-color 0.2s ease;
     /* Убедитесь, что курсор меняется */
     cursor: pointer;
-    min-width:max-content;
+    min-width: max-content;
 }
 
     .clickable-timer:hover {
