Refactor buttons to reusable components
Introduce `AddButton` and `RefreshButton` components in Blazor, replacing existing button implementations across multiple Razor files.
Refactor `DevicesPage.razor` to use `RefreshButton` and streamline device loading logic.

--- a/BlazorTool.Client/Components/OrdersGrid.razor
+++ b/BlazorTool.Client/Components/OrdersGrid.razor
@@ -38,7 +38,7 @@
             <GridSearchBox Width="200px" DebounceDelay="500"/>
             @if(UserState.HasPermission(PermissionType.WO_Add))
             {
-                <TelerikButton Icon="@SvgIcon.Plus" Rounded="lg" Size="lg" ThemeColor="primary" OnClick="@AddNewOrderWindow">@Localizer["Scheduler_AddNew"]</TelerikButton>
+                <AddButton onclick="@AddNewOrderWindow">@Localizer["Scheduler_AddNew"]</AddButton>
             }
         }
     </GridToolBarTemplate>
